syntax = "proto3";

option csharp_namespace = "Starfish.Web";

package rate_limiter;

service RateLimiter {
  rpc Acquire (RateLimiterRequest) returns (RateLimiterResult);
}

message RateLimiterRequest {
  string clientId = 1;
}

message RateLimiterResult {
  bool IsAcquired = 1;
  string Message = 2;
}
